--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
+  <!-- <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">  -->
 
     <title>HPC ED</title>
 
@@ -27,6 +27,7 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
+          <!--
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
@@ -44,6 +45,7 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
+          -->
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -124,7 +126,15 @@ training materials to a much wider audience.</p>
     </main>
 
     <footer class="container">
-      <p>&copy; HPC ED</p>
+      <span style="font-size: .9em;">
+CyberTraining: Pilot: HPC ED: Building a Federated Repository and Increasing Access through Cybertraining 
+is supported by NSF grant <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2320977&HistoricalAwards=false">OAC-2320977</a></span>
+                  <br />
+              <span style="font-size: .8em;">&copy;<script type="text/javascript">
+                        <!--
+                            var d = new Date();
+                            document.write(d.getFullYear());
+                        //--></script> Cornell University</span>
     </footer>
 
     <!-- Bootstrap core JavaScript
