--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -121,7 +121,7 @@ training materials to a much wider audience.</p>
     </main>
 
     <footer class="container">
-      <span style="font-size: .9em;">
+      <span style="font-size: .9em;" class="text-center">
 CyberTraining: Pilot: HPC ED: Building a Federated Repository and Increasing Access through Cybertraining 
 is supported by NSF grant <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2320977&HistoricalAwards=false">OAC-2320977</a></span>
                   <br />
