--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ training materials to a much wider audience.</p>
     </main>
 
     <footer class="container">
-      <span style="font-size: .9em;" class="text-center">
+      <p class="text-center">
 CyberTraining: Pilot: HPC ED: Building a Federated Repository and Increasing Access through Cybertraining 
 is supported by NSF grant <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2320977&HistoricalAwards=false">OAC-2320977</a></span>
                   <br />
@@ -129,7 +129,7 @@ is supported by NSF grant <a href="https://www.nsf.gov/awardsearch/showAward?AWD
                         <!--
                             var d = new Date();
                             document.write(d.getFullYear());
-                        //--></script> Cornell University</span>
+                        //--></script> Cornell University</p>
     </footer>
 
     <!-- Bootstrap core JavaScript
