--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">HPC ED:</h1><h2>Building a Federated Repository and Increasing Access through Cybertraining</h2>
+          <h1 class="display-3">HPC-ED</h1>
+<h2>Discover &amp; Share</h2>
           
           <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
         </div>
@@ -80,10 +81,12 @@ described more clearly.</li>
 <li>Learners and organizations will quickly and accurately find materials
 via standardized descriptive tagging.</li>
         </ul>
-<p>The pilot will demonstrate that resource providers, campus portals,
+<p><a href="https://www.cac.cornell.edu/about/pubs/HPC%20ED%20CyberTraining.pdf">The pilot</a>
+  will demonstrate that resource providers, campus portals,
 schools, and other institutions can both incorporate training from
 multiple sources into their own familiar interface and publish their local
 training materials to a much wider audience.</p>
+          
           </div>
           <div class="col-md-4">
             <h2>Partners</h2>
