--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ training materials to a much wider audience.</p>
             <ul>
               <li><a href="https://sc23.supercomputing.org/?post_type=page&p=3480&sess=sess456">Tenth SC Workshop on Best Practices for HPC Training and Education</a></li>
               <li>The <strong>FAIR HPC Training</strong> meeting will be held at the SC23 Conference on 11/13/2023 from 10am-noon in room 711.
-
+              <li><em>HPC-ED Training Resource Type: Training</em> will be presented at <a href="https://hackhpc.github.io/facultyhack-gateways23/">FacultyHack@Gateway2023</a> on 10/18/2023</li>
             </ul>
                       
           </div>
