Update index.html added favicon and logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css"> 
+    <link rel="icon" type="image/x-icon" href="/imgs/HPC-ED-icon.png">
 
     <title>HPC ED</title>
 
@@ -54,6 +55,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <div class="container">
+          <img src="imgs/HPC-Ed.png" width="250px"> 
           <h1 class="display-3">HPC-ED</h1>
 <h2>Discover &amp; Share</h2>
           
