--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css"> 
     <link rel="icon" type="image/x-icon" href="/imgs/HPC-ED-icon.png">
 
-    <title>HPC ED</title>
+    <title>HPC-ED</title>
 
   </head>
 
@@ -55,8 +55,8 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <div class="container">
-          <img src="imgs/HPC-Ed.png" width="250px"> 
-          <h1 class="display-3">HPC-ED</h1>
+          <img src="imgs/HPC-Ed.png" width="250px" alt="HPC-ED logo"> 
+         <!-- <h1 class="display-3">HPC-ED</h1> -->
 <h2>Discover &amp; Share</h2>
           
           <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
