Update index.html logo
Switch to HPC-ED only logo and adjusted size to 300px w

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <div class="container">
-          <img src="imgs/HPC-Ed.png" width="250px" alt="HPC-ED logo"> 
+          <img src="imgs/HPC-ED-only.png" width="300px" alt="HPC-ED logo"> 
          <!-- <h1 class="display-3">HPC-ED</h1> -->
 <h2>Discover &amp; Share</h2>
           
